<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_BTPS" Id="{95cd0a46-696d-4a91-9add-3a055029a394}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    (*
    Motor - Linear
        LAS:BTS:MCS2:01:m1 (ioc-las-bts-mcs1, las_bts_mcs2_01_m1)
        LAS:BTS:MCS2:01:m4 (ioc-las-bts-mcs1, las_bts_mcs2_01_m4)
        LAS:BTS:MCS2:01:m7 (ioc-las-bts-mcs1, las_bts_mcs2_01_m7)
    *)
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS1Lin
        link: @(SIM)LAS:BTS:MCS2:01:m1
    '}
    fbLS1Linear : FB_EpicsMotorMonitor;
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS5:Lin
        link: @(SIM)LAS:BTS:MCS2:01:m4
    '}
    fbLS5Linear : FB_EpicsMotorMonitor;
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS8:Lin
        link: @(SIM)LAS:BTS:MCS2:01:m7
    '}
    fbLS8Linear : FB_EpicsMotorMonitor;

    (*
        Motor - Rotary
            LAS:BTS:MCS2:01:m2 (ioc-las-bts-mcs1, las_bts_mcs2_01_m2)
            LAS:BTS:MCS2:01:m6 (ioc-las-bts-mcs1, las_bts_mcs2_01_m6)
            LAS:BTS:MCS2:01:m8 (ioc-las-bts-mcs1, las_bts_mcs2_01_m8)
    *)
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS1:Rot
        link: @(SIM)LAS:BTS:MCS2:01:m2
    '}
    fbLS1Rotary : FB_EpicsMotorMonitor;
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS5:Rot
        link: @(SIM)LAS:BTS:MCS2:01:m6
    '}
    fbLS5Rotary : FB_EpicsMotorMonitor;
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS8:Rot
        link: @(SIM)LAS:BTS:MCS2:01:m8
    '}
    fbLS8Rotary : FB_EpicsMotorMonitor;

    (*
        Motor - Goniometer
            LAS:BTS:MCS2:01:m3 (ioc-las-bts-mcs1, las_bts_mcs2_01_m3)
            LAS:BTS:MCS2:01:m5 (ioc-las-bts-mcs1, las_bts_mcs2_01_m5)
            LAS:BTS:MCS2:01:m9 (ioc-las-bts-mcs1, las_bts_mcs2_01_m9)
    *)
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS1:Gon
        link: @(SIM)LAS:BTS:MCS2:01:m3
    '}
    fbLS1Goniometer : FB_EpicsMotorMonitor;
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS5:Gon
        link: @(SIM)LAS:BTS:MCS2:01:m5
    '}
    fbLS5Goniometer : FB_EpicsMotorMonitor;
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS8:Gon
        link: @(SIM)LAS:BTS:MCS2:01:m9
    '}
    fbLS8Goniometer : FB_EpicsMotorMonitor;

    (* Near field camera stats plugins, per bay *)
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS1:NF
        link: @(SIM)LAS:LHN:BAY1:CAM:01:Stats2:
    '}
    fbLS1NearFieldCamStats : FB_EpicsStatsMonitor;

    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS5:NF
        link: @(SIM)LAS:LHN:BAY3:CAM:01:Stats2:
    '}
    fbLS5NearFieldCamStats : FB_EpicsStatsMonitor;

    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS8:NF
        link: @(SIM)LAS:LHN:BAY4:CAM:01:Stats2:
    '}
    fbLS8NearFieldCamStats : FB_EpicsStatsMonitor;

    (* Far-field camera stats plugins, per bay *)
    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS1:FF
        link: @(SIM)LAS:LHN:BAY1:CAM:02:Stats2:
    '}
    fbLS1FarFieldCamStats : FB_EpicsStatsMonitor;

    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS5:FF
        link: @(SIM)LAS:LHN:BAY3:CAM:02:Stats2:
    '}
    fbLS5FarFieldCamStats : FB_EpicsStatsMonitor;

    {attribute 'pytmc' := '
        pv: LTLHN:BTPS:Chk:LS8:FF
        link: @(SIM)LAS:LHN:BAY4:CAM:02:Stats2:
    '}
    fbLS8FarFieldCamStats : FB_EpicsStatsMonitor;

    {attribute 'pytmc' := 'pv: LTLHN:LS1:BTPS'}
    fbSafetyLS1 : FB_ShutterSafety;
    {attribute 'pytmc' := 'pv: LTLHN:LS5:BTPS'}
    fbSafetyLS5 : FB_ShutterSafety;
    {attribute 'pytmc' := 'pv: LTLHN:LS8:BTPS'}
    fbSafetyLS8 : FB_ShutterSafety;

    {attribute 'pytmc' := '
        pv: LTLHN:LD
        expand: %d
    '}
    fbDestinations : ARRAY [1..GVL_BTPS_Constants.nDestinations] OF FB_DestinationDataStore;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>