<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_BTPS" Id="{98170510-de7b-424a-a18f-b4c889af69d0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_BTPS
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL_BTPS.fbBay1Linear(bEnable:=TRUE);
GVL_BTPS.fbBay3Linear(bEnable:=TRUE);
GVL_BTPS.fbBay4Linear(bEnable:=TRUE);

GVL_BTPS.fbBay1Rotary(bEnable:=TRUE);
GVL_BTPS.fbBay3Rotary(bEnable:=TRUE);
GVL_BTPS.fbBay4Rotary(bEnable:=TRUE);

GVL_BTPS.fbBay1Goniometer(bEnable:=TRUE);
GVL_BTPS.fbBay3Goniometer(bEnable:=TRUE);
GVL_BTPS.fbBay4Goniometer(bEnable:=TRUE);

GVL_BTPS.fbBay1NearFieldCamStats(bEnable:=TRUE, fMaximumFrameTime:=GVL_BTPS_Retain.fMaximumFrameTime, fMinimumValidChange:=GVL_BTPS_Retain.fMinCentroidChange);
GVL_BTPS.fbBay3NearFieldCamStats(bEnable:=TRUE, fMaximumFrameTime:=GVL_BTPS_Retain.fMaximumFrameTime, fMinimumValidChange:=GVL_BTPS_Retain.fMinCentroidChange);
GVL_BTPS.fbBay4NearFieldCamStats(bEnable:=TRUE, fMaximumFrameTime:=GVL_BTPS_Retain.fMaximumFrameTime, fMinimumValidChange:=GVL_BTPS_Retain.fMinCentroidChange);

GVL_BTPS.fbBay1FarFieldCamStats(bEnable:=TRUE, fMaximumFrameTime:=GVL_BTPS_Retain.fMaximumFrameTime, fMinimumValidChange:=GVL_BTPS_Retain.fMinCentroidChange);
GVL_BTPS.fbBay3FarFieldCamStats(bEnable:=TRUE, fMaximumFrameTime:=GVL_BTPS_Retain.fMaximumFrameTime, fMinimumValidChange:=GVL_BTPS_Retain.fMinCentroidChange);
GVL_BTPS.fbBay4FarFieldCamStats(bEnable:=TRUE, fMaximumFrameTime:=GVL_BTPS_Retain.fMaximumFrameTime, fMinimumValidChange:=GVL_BTPS_Retain.fMinCentroidChange);

GVL_BTPS.fbDestinations[1](sName:='TMO IP1', fbDestinationValve:=GVL_BTS_VAC.fb_LD8_VGC);
GVL_BTPS.fbDestinations[2](sName:='TMO IP2', fbDestinationValve:=GVL_BTS_VAC.fb_LD10_VGC);
GVL_BTPS.fbDestinations[3](sName:='TMO IP3', fbDestinationValve:=GVL_BTS_VAC.fb_LD2_VGC);
GVL_BTPS.fbDestinations[4](sName:='RIX qRIXS', fbDestinationValve:=GVL_BTS_VAC.fb_LD6_VGC);
GVL_BTPS.fbDestinations[5](sName:='RIX ChemRIXS', fbDestinationValve:=GVL_BTS_VAC.fb_LD4_VGC);
GVL_BTPS.fbDestinations[6](sName:='XPP', fbDestinationValve:=GVL_BTS_VAC.fb_LD14_VGC);
GVL_BTPS.fbDestinations[7](sName:='Laser Lab', fbDestinationValve:=GVL_BTS_VAC.fb_LD9_VGC);

(* Shutter safety evaluation should always come at the end. *)
GVL_BTPS.fbShutterSafety1(nSourceIndex:=1, fbDestinations:=GVL_BTPS.fbDestinations);
// GVL_BTPS.fbShutterSafety2(nIndex:=2, fbDestinations:=GVL_BTPS.fbDestinations);
GVL_BTPS.fbShutterSafety3(nSourceIndex:=3, fbDestinations:=GVL_BTPS.fbDestinations);
GVL_BTPS.fbShutterSafety4(nSourceIndex:=4, fbDestinations:=GVL_BTPS.fbDestinations);

(* Based on the shutter safety result; send open or close request to shutters *)
IF NOT GVL_BTPS_Retain.bSystemOverride THEN
    GVL_Shutters.fbBay1.bOpenRequest := GVL_BTPS.fbShutterSafety1.bOpenSignal;
    // GVL_Shutters.fbBay2.bOpenRequest := GVL_BTPS.fbShutterSafety2.bOpenSignal;
    GVL_Shutters.fbBay3.bOpenRequest := GVL_BTPS.fbShutterSafety3.bOpenSignal;
    GVL_Shutters.fbBay4.bOpenRequest := GVL_BTPS.fbShutterSafety4.bOpenSignal;
END_IF

(* Periodically save persistent variables with source/destination store information *)
PRG_SavePeristentVariables();]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>